some change on base templates

--- a/templates/base-index.html
+++ b/templates/base-index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>{% block title %}{% endblock %} &middot; Got it</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="山东理工大学,成绩查询,校外,正方教务系统,四六级成绩查询,学分绩点,考试时间地点,课表,本学期,查询">
     <meta name="description" content="山东理工大学校外成绩查询,学分绩点查询,四六级成绩查询.">
     <meta name="author" content="ma6174,zhwei">
