--- a/templates/base-result.html
+++ b/templates/base-result.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>查询结果--Got it</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="keywords" content="山东理工大学,成绩查询,校外,正方教务系统,四六级成绩查询,学分绩点,考试时间地点,课表,本学期,查询">
+    <meta name="description" content="山东理工大学校外成绩查询,学分绩点查询,四六级成绩查询.">
 
     <!-- Le styles -->
     {% include "css.html" %}
@@ -55,12 +57,13 @@
           <center>如果我们做的对您有所帮助, 请考虑是否<a href="/donate.html">赞助</a>我们</center>
           <hr />
           <p>查询更多：
-            <a class="btn btn-primary" href='/more/zheng'>成绩</a>
-            <a class="btn btn-info" href='/more/kebiao'>课表</a>
-            <a class="btn btn-warning" href='/more/kaoshi'>考试时间</a>
-            <a class="btn btn-success" href='/more/score'>绩点&总成绩</a>
-            <a class="btn btn-default" href='/more/oldcet'>往年CET</a>
-            <a onclick=condensed() class='btn btn-default'>表格调整</a>
+            <a class="btn btn-primary" href='/more/zheng'>成绩</a>&nbsp;
+            <a class="btn btn-default" href='/more/lastscore'>上学期成绩</a>&nbsp;
+            <a class="btn btn-info" href='/more/kebiao'>课表</a>&nbsp;
+            <a class="btn btn-warning" href='/more/kaoshi'>考试时间</a>&nbsp;
+            <a class="btn btn-success" href='/more/score'>绩点&总成绩</a>&nbsp;
+            <a class="btn btn-default" href='/more/oldcet'>往年CET</a>&nbsp;
+            <a onclick=condensed() class='btn btn-default'>表格调整</a>&nbsp;
           </p>
           <hr />
         </div>
