--- a/templates/result.html
+++ b/templates/result.html
@@ -28,11 +28,23 @@
 
 <div class="table-responsive">
 
-<table class= "table table-striped table-bordered table-condensed">
-  {% for i in table %}
-  {{i}}
+{% if tables %}
+  {% for table in tables %}
+    <table class="table table-striped table-bordered table-condensed">
+      {% for i in table %}
+      {{i}}
+      {% endfor %}
+    </table>
   {% endfor %}
-</table>
+{% endif %}
+
+{% if table %}
+  <table class="table table-striped table-bordered table-condensed">
+    {% for i in table %}
+    {{i}}
+    {% endfor %}
+  </table>
+{% endif %}
 
 </div>
 <h2 id="error">{{ error }}</h2>
