--- a/templates/zheng.html
+++ b/templates/zheng.html
@@ -17,8 +17,7 @@
     <p><input type="password" id="pw" name="pw" class="form-control" placeholder="密码"/></p>
     <p>
       <input type="text" id="verify" name="verify" class="form-control" placeholder="验证码" style="width:50%; float:left;"/>
-      <!-- <img style="cursor: pointer;" onClick="reloadcode()" src="/zheng/checkcode.gif" id='checkcode' alt="验证码" /> -->
-      <img src="{{ checkcode }}" class="img-responsive" id='checkcode' alt="验证码" />
+      <img style="cursor: pointer;" onClick="reloadcode()" src="/zheng/checkcode?r={{ ctime }}" id='checkcode' alt="验证码" title="单击换一张验证码"/>
     </p>
     <p>
       <select id="type" name="type" class="selectpicker">
