--- a/templates/zheng.html
+++ b/templates/zheng.html
@@ -16,7 +16,7 @@
     </p>
     <p><input type="password" id="pw" name="pw" class="form-control" placeholder="密码"/></p>
     <p>
-      <input type="text" id="verify" name="verify" class="form-control" placeholder="验证码" style="width:50%; float:left;"/>
+      <input type="text" id="verify" name="verify" class="form-control" placeholder="验证码" style="width:50%; float:left;"/>&nbsp;
       <img style="cursor: pointer;" onClick="reloadcode()" src="/zheng/checkcode?r={{ ctime }}" id='checkcode' alt="验证码" title="单击换一张验证码"/>
     </p>
     <p>
