--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,7 @@
 {% block content %}
 <div class="jumbotron">
   <p><a class="btn btn-large btn-success" href="">Got It</a></p>
-  <p class="lead">微信公众账号上线了！！！</p>
-  <p><a href="/weixin" class="btn btn-primary btn-lg">点击抢鲜试用！</a></p>
+  <p class="lead">天天好心情!</p>
 </div>
 
 <hr>
