--- a/templates/panel.html
+++ b/templates/panel.html
@@ -63,6 +63,7 @@
                             ('/manage/panel', 'admin_index', '后台首页','th'),
                             ('/manage/now', 'now', '负载状况','time'),
                             ('/manage/analytics', 'analytics', '数据统计','hdd'),
+                            ('/manage/o/ls/jumbotron', 'jumbotron', '首页公告','heart'),
                             ('/manage/o/ls/notice', 'notice', '网站公告','send'),
                             ('/manage/o/ls/wxcomment', 'wxcomment', '微信留言','thumbs-up'),
                             ('/manage/o/ls/donate', 'lsdonate', '捐赠者','usd'),
