--- a/templates/donate.html
+++ b/templates/donate.html
@@ -33,7 +33,7 @@
     <thead>
     <tr>
       <th>赞助者</th>
-      <td><strong>金额</strong></td>
+      <th><strong>金额</strong></th>
     </tr>
     </thead>
     <tbody>
