--- a/templates/panel.html
+++ b/templates/panel.html
@@ -1,254 +1,179 @@
-{% import 'form.html' as form %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>管理界面</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    {% include "css.html" %}
-    <link rel="stylesheet" href="http://gotit.qiniudn.com/jquery.qeditor.css" />
-    <link rel="stylesheet" href="http://gotit.qiniudn.com/font-awesome.min.css" />
-    <!-- Le styles -->
-    <style>
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .sidebar-nav {
-        padding: 9px 0;
-      }
-      .qeditor_preview {
-        min-height: 300px;
-      }
-      #editor {
-        height:300px;
-      }
-      @media (max-width: 980px) {
-        /* Enable use of floated navbar text */
-        .navbar-text.pull-right {
-          float: none;
-          padding-left: 5px;
-          padding-right: 5px;
-        }
-      }
-    </style>
+{% extends "base-panel.html" %}
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="/static/js/html5shiv.js"></script>
-    <![endif]-->
-  </head>
+{% block content %}
 
-  <body>
+  {% if item %}
 
-    <nav class="navbar navbar-inverse navbar-fixed-top bs-navbar" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Gotit</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav">
-              <li><a href="/manage/panel">后台首页</a></li>
-              <li ><a href="/manage/now"><i class="glyphicon glyphicon-time"></i>负载状况</a></li>
-              <li ><a href="/manage/analytics"><i class="glyphicon glyphicon-hdd"></i>数据统计</a></li>
-              <li ><a href="/manage/o/ls/wxcomment"><i class="glyphicon glyphicon-thumbs-up"></i>微信留言</a></li>
-              <li ><a href="/manage/o/ls/donate"><i class="glyphicon glyphicon-usd"></i>捐赠者</a></li>
-
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">公告<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                <li ><a href="/manage/o/ls/notice"><i class="glyphicon glyphicon-send"></i>&nbsp;网站公告</a></li>
-                <li ><a href="/manage/o/ls/jumbotron"><i class="glyphicon glyphicon-heart"></i>&nbsp;首页公告</a></li>
-                <li ><a href="/manage/o/ls/zheng"><i class="glyphicon glyphicon-th-list"></i>&nbsp;正方公告</a></li>
-                <li ><a href="/manage/o/ls/cet"><i class="glyphicon glyphicon-headphones"></i>&nbsp;四六级公告</a></li>
-                <li ><a href="/manage/o/ls/score"><i class="glyphicon glyphicon-signal"></i>&nbsp;成绩公告</a></li>
-                </ul>
-              </li>
-              <li ><a href="/manage/backup"><i class="glyphicon glyphicon-cloud-upload"></i>网站备份</a></li>
-              <li ><a href="/manage/readlog/1"><i class="glyphicon glyphicon-eye-open"></i>网站日志</a></li>
-              <li ><a href="/manage/de"><i class="glyphicon glyphicon-eye-close"></i>DetailError</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-          </ul>
-        </div><!-- /.navbar-collapse -->
-    </nav>
-
-
-    <div class="container">
-        <div class="row">
-            {% if item %}
-
-              <legend>{{ opera }} - {{ item }}</legend>
-              <p><a href="/manage/o/cr/{{ item }}" class='btn btn-default'><i class="glyphicon glyphicon-plus"></i>&nbsp;添加</a></p>
-              {% if opera == 'cr' %}
-                <form action="" method="POST" class="form-horizontal" role="form">
-                    <fieldset>
-                        {% if item == 'donate' %}
-                          {{ form.input(name='name', label='捐赠人') }}
-                          {{ form.input(name='much', label='金额') }}
-                        {% else %}
-                            <div class="form-group">
-                              <label>内容</label>
-                              <textarea name="content" id="editor" class="form-control" placeholder="Enter your text .."></textarea>
-                              <p class="help-block"></p>
-                            </div>
-                        {% endif %}
-                    </fieldset>
-                    {{ form.submit(value="提交") }}
-                </form>
-              {% elif opera == 'ls' %}
-                <table class='table table-hover'>
-                  <tbody>
-                  {% for l in ls %}
-                    <tr>
-                      {% if item == 'donate' %}
-                      <td>{{ l.name }}</td>
-                      <td>{{ l.much }}</td>
-                      <td>{{ l.datetime }}</td>
-                      {% elif item == 'wxcomment' %}
-                        <td class='text-overflow'>{{ l.content }}</td>
-                        <td>{{ l.datetime }}</td>
-			<td><span class="label label-primary" title="{{ l.user }}"><i class="glyphicon glyphicon-user"></i></span></td>
-                      {% else %}
-                        <td class='text-overflow'>{{ l.content }}</td>
-                        <td>{{ l.datetime }}</td>
-                      {% endif %}
-                      <td>
-                        <a href="/manage/o/del/{{ item }}/{{ l._id }}" class="btn btn-default"><i class='glyphicon glyphicon-remove'></i>&nbsp;删除</a>
-                      </td>
-                    </tr>
-                  {% endfor %}
-                  </tbody>
-                </table>
-              {% elif opera == 'del' %}
-              <div class="lead">
-                <br /><br />
-                <form method="post">
-                  <p class='lead'>是否确认删除？</p>
-                  <input type="hidden" name="oid" value="{{ oid }}"  />
-                  <div class="clearfix"></div>
-                  <div class="btn-group">
-                    <a onclick="location.href=document.referrer;" class="btn btn-default"><i class="glyphicon glyphicon-arrow-left"></i>&nbsp;返回</a>
+    <legend>{{ opera }} - {{ item }}</legend>
+    <p><a href="/manage/o/cr/{{ item }}" class='btn btn-default'><i class="glyphicon glyphicon-plus"></i>&nbsp;添加</a></p>
+    {% if opera == 'cr' %}
+      <form action="" method="POST" class="form-horizontal" role="form">
+          <fieldset>
+              {% if item == 'donate' %}
+                {{ form.input(name='name', label='捐赠人') }}
+                {{ form.input(name='much', label='金额') }}
+              {% else %}
+                  <div class="form-group">
+                    <label>内容</label>
+                    <textarea name="content" id="editor" class="form-control" placeholder="Enter your text .."></textarea>
+                    <p class="help-block"></p>
                   </div>
-                  <div class="btn-group">
-                    <input type="submit" value="确认" class="btn btn-danger" />
-                  </div>
-                </form>
-              </div>
               {% endif %}
+          </fieldset>
+          {{ form.submit(value="提交") }}
+      </form>
+    {% elif opera == 'ls' %}
+      <table class='table table-hover'>
+        <tbody>
+        {% for l in ls %}
+          <tr>
+            {% if item == 'donate' %}
+            <td>{{ l.name }}</td>
+            <td>{{ l.much }}</td>
+            <td>{{ l.datetime }}</td>
+            {% elif item == 'wxcomment' %}
+              <td class='text-overflow'>{{ l.content }}</td>
+              <td>{{ l.datetime }}</td>
+              <td><span class="label label-primary" title="{{ l.user }}"><i class="glyphicon glyphicon-user"></i></span></td>
+            {% else %}
+              <td class='text-overflow'>{{ l.content }}</td>
+              <td>{{ l.datetime }}</td>
+            {% endif %}
+            <td>
+              <a href="/manage/o/del/{{ item }}/{{ l._id }}" class="btn btn-default"><i class='glyphicon glyphicon-remove'></i>&nbsp;删除</a>
+            </td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+    {% elif opera == 'del' %}
+    <div class="lead">
+      <br /><br />
+      <form method="post">
+        <p class='lead'>是否确认删除？</p>
+        <input type="hidden" name="oid" value="{{ oid }}"  />
+        <div class="clearfix"></div>
+        <div class="btn-group">
+          <a onclick="location.href=document.referrer;" class="btn btn-default"><i class="glyphicon glyphicon-arrow-left"></i>&nbsp;返回</a>
+        </div>
+        <div class="btn-group">
+          <input type="submit" value="确认" class="btn btn-danger" />
+        </div>
+      </form>
+    </div>
+    {% endif %}
 
-            {% elif opera == 'backup' %}
-            <h2 class="lead">Export or Import</h2>
-            <div>
-              <p class="lead">Export</p>
-              <p><a href="/manage/backup/download" class="btn btn-default"><i class="glyphicon glyphicon-cloud-download"></i>&nbsp;导出备份</a></p>
+  {% elif opera == 'backup' %}
+  <h2 class="lead">Export or Import</h2>
+  <div>
+    <p class="lead">Export</p>
+    <p><a href="/manage/backup/download" class="btn btn-default"><i class="glyphicon glyphicon-cloud-download"></i>&nbsp;导出备份</a></p>
 <!--               <p class="lead">Import</p> -->
 <!--               <form method="post" action="">
-                <p><input type="file" name="myfile" /></p>
-                <p><button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-cloud-upload"></i>&nbsp;导入</button></p>
-              </form> -->
-            </div>
+      <p><input type="file" name="myfile" /></p>
+      <p><button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-cloud-upload"></i>&nbsp;导入</button></p>
+    </form> -->
+  </div>
 
-            {% elif opera == 'readlog' %}
-            <h2 class="lead">网站日志</h2>
-            <p>
-              <a href="/manage/readlog/1" class='btn btn-default'>最后50行</a>
-              <a href="/manage/readlog/2" class='btn btn-default'>最后100行</a>
-              <a href="/manage/readlog/3" class='btn btn-default'>最后150行</a>
-              <a href="/manage/readlog/4" class='btn btn-default'>最后200行</a>
-            </p>
-            <div>
-              <pre>
-                {% for line in lines %}{{ line }}{% endfor %}
-              </pre>
-            </div>
-            {% elif opera == 'analytics' %}
-              <h2>数据统计</h2>
-              <table class="table table-hover">
-                <thead>
-                  <th>项目</th>
-                  <th>次数</th>
-                  <th>置零</th>
-                </thead>
-                <tr>
-                  <th>InternalError</th>
-                  <td><span class='label label-danger'>{{ times.internalerror }}</span></td>
-                  <td><a href="?zero=internalerror" class="btn btn-default">置零</a></td>
-                </tr>
-                <tr>
-                  <th>验证码</th>
-                  <td><span class='label label-danger'>{{ times.checkcode }}</span></td>
-                  <td></td>
-                </tr>
-              </table>
-            {% elif opera == 'now' %}
-              <h2>负载状况</h2>
-              <table class="table table-hover">
-                <thead>
-                  <th>项目</th>
-                  <th>数目</th>
-                </thead>
-                <tr>
-                  <th>SESSION</th>
-                  <td><span class='label label-primary'>{{ data.session }}</span></td>
-                </tr>
-                <tr>
-                  <th>用户</th>
-                  <td><span class='label label-primary'>{{ data.user}}</span></td>
-                </tr>
-              </table>
-            {% elif opera == 'detail_error' %}
-            <h2>Detail Errors</h2>
-            <hr>
-            {% if hkey %}
-            <p><a href="{{ hkey }}/del" class="btn btn-default">Delete</a></p>
-            {% endif %}
-              {% if key_list and not hkey %}
-                  <ul>
-                  {% for per in key_list %}
-                    <li><a href="{% if key %}/manage/de/{{ key }}/{{ per }}{% else %}/manage/de/{{ per }}{% endif %}">{{ per }}</a></li>
-                  {% endfor %}
-                  </ul>
-              {% endif %}
-              {% if hkey %}
-                <div>
-                  {{ content }}
-                </div>
-              {% endif %}
-            {% else %}
-              <h2>welcome administrator</h2>
-                <br>
-                <br>
-                <br>
-                <div class="col-md-3">
-                  <a class="btn btn-default btn-block" href="/manage/o/ls/notice"><i class="glyphicon glyphicon-send"></i>&nbsp;网站公告</a>
-                  <a class="btn btn-default btn-block" href="/manage/o/ls/zheng"><i class="glyphicon glyphicon-th-list"></i>&nbsp;正方公告</a>
-                  <a class="btn btn-default btn-block" href="/manage/o/ls/cet"><i class="glyphicon glyphicon-headphones"></i>&nbsp;四六级公告</a>
-                  <a class="btn btn-default btn-block" href="/manage/o/ls/score"><i class="glyphicon glyphicon-signal"></i>&nbsp;成绩公告</a>
-                </div>
-            {% endif %}
-
-        </div>
-    </div> <!-- /container -->
-    <div id="footer">
-      <div class="container">
-        <p class="text-muted">Gotit@2014</p>
+  {% elif opera == 'readlog' %}
+  <h2 class="lead">网站日志</h2>
+  <p>
+    <a href="/manage/readlog/1" class='btn btn-default'>最后50行</a>
+    <a href="/manage/readlog/2" class='btn btn-default'>最后100行</a>
+    <a href="/manage/readlog/3" class='btn btn-default'>最后150行</a>
+    <a href="/manage/readlog/4" class='btn btn-default'>最后200行</a>
+  </p>
+  <div>
+    <pre>
+      {% for line in lines %}{{ line }}{% endfor %}
+    </pre>
+  </div>
+  {% elif opera == 'analytics' %}
+    <h2>数据统计</h2>
+    <table class="table table-hover">
+      <thead>
+        <th>项目</th>
+        <th>次数</th>
+        <th>置零</th>
+      </thead>
+      <tr>
+        <th>InternalError</th>
+        <td><span class='label label-danger'>{{ times.internalerror }}</span></td>
+        <td><a href="?zero=internalerror" class="btn btn-default">置零</a></td>
+      </tr>
+      <tr>
+        <th>验证码</th>
+        <td><span class='label label-danger'>{{ times.checkcode }}</span></td>
+        <td></td>
+      </tr>
+    </table>
+  {% elif opera == 'now' %}
+    <h2>负载状况</h2>
+    <table class="table table-hover">
+      <thead>
+        <th>项目</th>
+        <th>数目</th>
+      </thead>
+      <tr>
+        <th>SESSION</th>
+        <td><span class='label label-primary'>{{ data.session }}</span></td>
+      </tr>
+      <tr>
+        <th>用户</th>
+        <td><span class='label label-primary'>{{ data.user}}</span></td>
+      </tr>
+    </table>
+  {% elif opera == 'detail_error' %}
+  <h2>Detail Errors</h2>
+  <hr>
+  {% if hkey %}
+  <p><a href="{{ hkey }}/del" class="btn btn-default">Delete</a></p>
+  {% endif %}
+    {% if key_list and not hkey %}
+        <ul>
+        {% for per in key_list %}
+          <li><a href="{% if key %}/manage/de/{{ key }}/{{ per }}{% else %}/manage/de/{{ per }}{% endif %}">{{ per }}</a></li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+    {% if hkey %}
+      <div>
+        {{ content }}
+      </div>
+    {% endif %}
+  {% else %}
+    <h2>欢迎你, 网站管理员!</h2>
+    <p class="lead">请谨慎操作!</p>
+    <hr>
+    <div class="progress progress-striped active">
+      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+        <span class="sr-only">40% Complete (success)</span>
       </div>
     </div>
-    {% include "js.html" %}
+    <div class="progress progress-striped active">
+      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+        <span class="sr-only">20% Complete</span>
+      </div>
+    </div>
+    <div class="progress progress-striped active">
+      <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+        <span class="sr-only">60% Complete (warning)</span>
+      </div>
+    </div>
+    <div class="progress progress-striped active">
+      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+        <span class="sr-only">80% Complete (danger)</span>
+      </div>
+    </div>
+  {% endif %}
+
+{% endblock %}
+
+{% block footer %}
     {% if item %}
       <script src="http://gotit.qiniudn.com/jquery.qeditor.js"></script>
       <script>
       $("#editor").qeditor({});
       </script>
     {% endif %}
-  </body>
-</html>
+{% endblock %}
